[gd_scene load_steps=75 format=2]

[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__ATTACK_005.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__ATTACK_003.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__ATTACK_002.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__ATTACK_001.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__ATTACK_008.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__ATTACK_009.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__ATTACK_000.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__ATTACK_004.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__ATTACK_007.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__ATTACK_006.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__DIE_007.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__DIE_006.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__DIE_003.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__DIE_008.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__DIE_001.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__DIE_002.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__DIE_004.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__DIE_005.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__DIE_000.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__DIE_009.png" type="Texture" id=20]
[ext_resource path="res://Scripts/Characters/Knight.gd" type="Script" id=21]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__IDLE_003.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__IDLE_001.png" type="Texture" id=23]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__IDLE_006.png" type="Texture" id=24]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__IDLE_002.png" type="Texture" id=25]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__IDLE_000.png" type="Texture" id=26]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__IDLE_004.png" type="Texture" id=27]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__IDLE_005.png" type="Texture" id=28]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__IDLE_008.png" type="Texture" id=29]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__IDLE_007.png" type="Texture" id=30]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__IDLE_009.png" type="Texture" id=31]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__HURT_001.png" type="Texture" id=32]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__HURT_000.png" type="Texture" id=33]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__HURT_006.png" type="Texture" id=34]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__HURT_004.png" type="Texture" id=35]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__HURT_007.png" type="Texture" id=36]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__HURT_008.png" type="Texture" id=37]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__HURT_002.png" type="Texture" id=38]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__HURT_009.png" type="Texture" id=39]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__HURT_005.png" type="Texture" id=40]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__HURT_003.png" type="Texture" id=41]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__WALK_003.png" type="Texture" id=42]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__WALK_004.png" type="Texture" id=43]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__WALK_007.png" type="Texture" id=44]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__WALK_001.png" type="Texture" id=45]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__WALK_009.png" type="Texture" id=46]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__WALK_002.png" type="Texture" id=47]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__WALK_006.png" type="Texture" id=48]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__WALK_005.png" type="Texture" id=49]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__WALK_000.png" type="Texture" id=50]
[ext_resource path="res://Assets/Sprites/chars/2_KNIGHT/Knight_02__WALK_008.png" type="Texture" id=51]
[ext_resource path="res://Scenes/UI/CharacterUI.tscn" type="PackedScene" id=52]
[ext_resource path="res://Scripts/Characters/Knight/PlayerFSM.gd" type="Script" id=53]
[ext_resource path="res://Scripts/Utils/InputInterpreter.gd" type="Script" id=54]
[ext_resource path="res://Scenes/UI/ActionMenu.tscn" type="PackedScene" id=55]
[ext_resource path="res://Scripts/Characters/Knight/State/Attack.gd" type="Script" id=56]
[ext_resource path="res://Scripts/Characters/Knight/State/Ready.gd" type="Script" id=57]
[ext_resource path="res://Assets/UI/Icon/shield_no_background.tres" type="Texture" id=58]
[ext_resource path="res://Scripts/Characters/Knight/State/Defend.gd" type="Script" id=59]
[ext_resource path="res://Scripts/Characters/Knight/State/Heal.gd" type="Script" id=60]
[ext_resource path="res://Assets/UI/Icon/potion_no_background.tres" type="Texture" id=61]
[ext_resource path="res://Scripts/Characters/Knight/State/EndTurn.gd" type="Script" id=62]
[ext_resource path="res://Scripts/Characters/Knight/State/Dead.gd" type="Script" id=63]
[ext_resource path="res://Scripts/Characters/Knight/State/Flee.gd" type="Script" id=64]
[ext_resource path="res://Scenes/UI/BuffUI.tscn" type="PackedScene" id=65]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 22 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 24 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 31 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 50 ), ExtResource( 45 ), ExtResource( 47 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 49 ), ExtResource( 48 ), ExtResource( 44 ), ExtResource( 51 ), ExtResource( 46 ) ],
"loop": true,
"name": "move",
"speed": 15.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 7 ) ],
"loop": false,
"name": "cast_skill_out",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": false,
"name": "cast_skill_in",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "attack",
"speed": 15.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 32 ), ExtResource( 38 ), ExtResource( 41 ), ExtResource( 35 ), ExtResource( 40 ), ExtResource( 34 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 39 ) ],
"loop": false,
"name": "hurt",
"speed": 20.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 20 ) ],
"loop": false,
"name": "dead",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 143.513, 235.234 )

[sub_resource type="Animation" id=3]
resource_name = "cast"
tracks/0/type = "value"
tracks/0/path = NodePath("Shield:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shield:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 0, 0, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
max_value = 10.0
_data = [ Vector2( 0, 4.11364 ), 0.0, 0.0, 0, 0, Vector2( 0.487342, 6.77273 ), 0.0, 0.0, 0, 0, Vector2( 0.740506, 7.59091 ), 0.0, 0.0, 0, 0, Vector2( 1, 9.95455 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
trail_divisor = 3
trail_size_modifier = SubResource( 7 )
emission_shape = 2
emission_box_extents = Vector3( 20, 1, 10 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 180.0
gravity = Vector3( 0, -200, 0 )
initial_velocity = 30.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 5 )

[sub_resource type="Animation" id=9]
resource_name = "use_potion"
tracks/0/type = "value"
tracks/0/path = NodePath("Potion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Potion:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Knight" type="Area2D" groups=[
"Player",
]]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 21 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 6
playing = true

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
position = Vector2( 14, -44 )
shape = SubResource( 2 )

[node name="Target" type="Position2D" parent="."]
position = Vector2( 306, 2 )

[node name="Tween" type="Tween" parent="."]

[node name="AttackCast" type="RayCast2D" parent="."]
cast_to = Vector2( 450, 0 )

[node name="CharacterUI" parent="." instance=ExtResource( 52 )]
margin_left = -154.544
margin_top = -415.358
margin_right = -154.544
margin_bottom = -415.358
rect_scale = Vector2( 0.8, 0.8 )

[node name="State" type="Node" parent="."]
script = ExtResource( 53 )
character_path = NodePath("..")
sprite_path = NodePath("../Sprite")
action_menu_path = NodePath("../ActionMenu")

[node name="Ready" type="Node" parent="State"]
script = ExtResource( 57 )

[node name="Attack" type="Node" parent="State"]
script = ExtResource( 56 )
attack_cast_path = NodePath("../../AttackCast")

[node name="Tween" type="Tween" parent="State/Attack"]

[node name="Defend" type="Node" parent="State"]
script = ExtResource( 59 )

[node name="Shield" type="Sprite" parent="State/Defend"]
visible = false
position = Vector2( 18, -18 )
scale = Vector2( 8, 8 )
texture = ExtResource( 58 )

[node name="DefendAnim" type="AnimationPlayer" parent="State/Defend"]
anims/cast = SubResource( 3 )

[node name="Heal" type="Node" parent="State"]
script = ExtResource( 60 )

[node name="Potion" type="Sprite" parent="State/Heal"]
position = Vector2( 20, -6 )
scale = Vector2( 4, 4 )
texture = ExtResource( 61 )

[node name="HealParticles" type="Particles2D" parent="State/Heal"]
position = Vector2( 14, 78 )
scale = Vector2( 3, 3 )
emitting = false
amount = 500
one_shot = true
process_material = SubResource( 8 )

[node name="HealAnim" type="AnimationPlayer" parent="State/Heal"]
anims/use_potion = SubResource( 9 )

[node name="Flee" type="Node" parent="State"]
script = ExtResource( 64 )

[node name="EndTurn" type="Node" parent="State"]
script = ExtResource( 62 )

[node name="Dead" type="Node" parent="State"]
script = ExtResource( 63 )

[node name="InputInterpreter" type="Node" parent="."]
script = ExtResource( 54 )
state_machine_path = NodePath("../State")

[node name="ActionMenu" parent="." instance=ExtResource( 55 )]
margin_left = -140.695
margin_top = 197.839
margin_right = -140.695
margin_bottom = 197.839

[node name="BuffUI" parent="." instance=ExtResource( 65 )]
[connection signal="activate_action_menu" from="State" to="ActionMenu" method="_on_State_activate_action_menu"]
[connection signal="disactivate_action_menu" from="State" to="ActionMenu" method="_on_State_disactivate_action_menu"]
[connection signal="attack" from="ActionMenu" to="InputInterpreter" method="_on_ActionMenu_attack"]
[connection signal="defend" from="ActionMenu" to="InputInterpreter" method="_on_ActionMenu_defend"]
[connection signal="flee" from="ActionMenu" to="InputInterpreter" method="_on_ActionMenu_flee"]
[connection signal="heal" from="ActionMenu" to="InputInterpreter" method="_on_ActionMenu_heal"]
